# HypoGen

./: Dockerfile  README.md  app.py  assistants.py  knowledgebase.py  pyproject.toml
BO_CA/: Bayesian_optimization.py  correlation_analysis.py
YOLO/: detect.py  post.py  train.py  training_data.yaml
data/: heatmap-data.csv
tests/: combined_report-Claude-3-5-run1.md  combined_report-Claude-3-5-run2.md  combined_report-Claude-3-5-run3.md  hypotheses_report-Claude-3-5.md  hypotheses_report-GPT-4o.md
wip/reports/: analysis_report.md  hypotheses_report.md
