[tool.poetry]
name = "hypothesis-generation"
version = "0.1.0"
description = "A codebase for hypothesis generation workflow using LLM"
authors = ["Ruozhu Feng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
phidata = "2.4.22"
openai = "^1.35.10"
streamlit = "^1.36.0"
anthropic = "^0.30.1"
pypdf = "^4.2.0"
pgvector = "^0.3.0"
arxiv = "^2.1.3"
exa-py = "^1.0.12"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
wikipedia = "^1.4.0"
duckdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
